--- a/application/admin/view/general/config/demandset.html
+++ b/application/admin/view/general/config/demandset.html
@@ -5,7 +5,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('一级分类')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:Form::fieldlist('row[demandset1]', json_decode($row['demandset1']), null, '', ['data-rule'=>'required'])}
+            {:Form::fieldlist('row[demandset1]', json_decode($row['demandset1'],true), null, '', ['data-rule'=>'required'])}
             <p class="help-block">*键不能为空,否则无法添加变量值</p>
         </div>
     </div>
@@ -14,7 +14,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('画作类别')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:Form::fieldlist('row[demandset2]', json_decode($row['demandset2']), null, '', ['data-rule'=>'required'])}
+            {:Form::fieldlist('row[demandset2]', json_decode($row['demandset2'],true), null, '', ['data-rule'=>'required'])}
             <p class="help-block">*键不能为空,否则无法添加变量值</p>
         </div>
     </div>
@@ -23,7 +23,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('画作风格')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:Form::fieldlist('row[demandset3]', json_decode($row['demandset3']), null, '', ['data-rule'=>'required'])}
+            {:Form::fieldlist('row[demandset3]', json_decode($row['demandset3'],true), null, '', ['data-rule'=>'required'])}
             <p class="help-block">*键不能为空,否则无法添加变量值</p>
         </div>
     </div>
@@ -31,7 +31,7 @@
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('画作手法')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:Form::fieldlist('row[demandset4]', json_decode($row['demandset4']), null, '', ['data-rule'=>'required'])}
+            {:Form::fieldlist('row[demandset4]', json_decode($row['demandset4'],true), null, '', ['data-rule'=>'required'])}
             <p class="help-block">*键不能为空,否则无法添加变量值</p>
         </div>
     </div>
