后台功能 除第三方接口 线下版本完成

--- a/application/admin/view/artist_demand/show_introduce.html
+++ b/application/admin/view/artist_demand/show_introduce.html
@@ -8,7 +8,7 @@
     <tbody>
     {volist name="row" id="vo"  }
     <tr>
-        <td>{:__('Introduce')}</td>
+        <td>{:__(ucfirst($key))}</td>
         <td>{$vo}</td>
     </tr>
     {/volist}
