--- a/application/admin/view/artist_tx/add.html
+++ b/application/admin/view/artist_tx/add.html
@@ -1,35 +1,42 @@
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Artist_id')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('可提现余额')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-artist_id" data-rule="required" data-source="artist/index" class="form-control selectpage" name="row[artist_id]" type="text" value="">
+            <a class="btn btn-success"><span class="text-primary" style="color:white;">{$artist.wallet|htmlentities}</span></a>
+            <p class="help-block">*最提提现100元</p>
         </div>
     </div>
+
+
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Type')}:</label>
+        <div class="col-xs-12 col-sm-8">
+
+            <div class="radio">
+                {foreach name="typeList" item="vo"}
+                <label for="row[type]-{$key}"><input id="row[type]-{$key}" name="row[type]" type="radio" value="{$key}" {in name="key" value="10"}checked{/in} /> {$vo}</label>
+                {/foreach}
+            </div>
+
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Account')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-account" data-rule="required" class="form-control"  name="row[account]" type="text">
+        </div>
+    </div>
+
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Tx_price')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-tx_price" data-rule="required" class="form-control" step="0.01" name="row[tx_price]" type="number">
         </div>
     </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Sj_price')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-sj_price" data-rule="required" class="form-control" step="0.01" name="row[sj_price]" type="number">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            
-            <div class="radio">
-            {foreach name="statusList" item="vo"}
-            <label for="row[status]-{$key}"><input id="row[status]-{$key}" name="row[status]" type="radio" value="{$key}" {in name="key" value="10"}checked{/in} /> {$vo}</label> 
-            {/foreach}
-            </div>
 
-        </div>
-    </div>
+
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
